--- a/views/campground.ejs
+++ b/views/campground.ejs
@@ -1,24 +1,25 @@
-<% layout('layouts/boilerplate') %> 
-    <h1>Campground</h1>
-    <ul>
-        <% for(info of infos) { %> 
-            <div class="card my-2">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img class="img-fluid" src="<%= info.img %> " alt="">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= info.title %> </h5>
-                            <p class="card-text"><%= info.description %> </p>
-                            <p class="card-text">
-                                <small class="text-muted"><%= info.location %></small>
-                            </p>
-                            <a href="/campground/<%= info._id %>" class="btn btn-primary">View <%= info.title %></a>
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
-        <% } %> 
-    </ul> 
+<% layout('layouts/boilerplate') %>
+<h1>Campground</h1>
+<ul>
+  <% for(campground of campgrounds) { %>
+  <div class="card my-2">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid" src="<%= campground.img %> " alt="" />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%= campground.title %></h5>
+          <p class="card-text"><%= campground.description %></p>
+          <p class="card-text">
+            <small class="text-muted"><%= campground.location %></small>
+          </p>
+          <a href="/campground/<%= campground._id %>" class="btn btn-primary"
+            >View <%= campground.title %></a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <% } %>
+</ul>
