--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,7 @@
-<% layout('layouts/boilerplate') %> 
-    <h1>Hello !!! Welcome to Yelpcamp</h1>
+<% layout('layouts/boilerplate') %>
+<div class="root">
+  <div>
+    <h3>Welcome To Yelpcamp!!!</h3>
+    <p>A place to share and know about some beautiful place for camping</p>
+  </div>
+</div>
