--- a/public/CSS/homepage.css
+++ b/public/CSS/homepage.css
@@ -1,11 +1,25 @@
+.h-body {
+  background-image: url("images/Homepage.jpg");
+  background-size: 100% 100%;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.h-navbar {
+  background-image: inherit;
+}
+
 .root {
   width: 100%;
   height: 86.5vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.493);
   color: rgb(151, 177, 177);
-  background-image: url("./images/Homepage.jpg");
-  background-size: 100% 100%;
+}
+
+@media (max-width: 700px) {
+  .h-body {
+    background-image: url("images/mob-wallpaper.jpg");
+  }
 }
