--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,16 +12,13 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div
-      class="collapse navbar-collapse d-flex justify-content-between"
-      id="navbarNavAltMarkup"
-    >
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/campground/all">Campgrounds</a>
         <a class="nav-link" href="/campground/new">New Campground</a>
       </div>
-      <div class="navbar-nav mr-2">
+      <div class="navbar-nav ml-auto">
         <% if(!currentUser) {%>
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/register">Register</a>
