--- a/public/CSS/img-ctn.css
+++ b/public/CSS/img-ctn.css
@@ -1,3 +1,6 @@
 .img-ctn {
-  height: 350px;
+  display: flex;
+  align-items: center;
+  height: 70% !important;
+  background-color: rgb(143, 156, 156);
 }
