--- a/views/campground.ejs
+++ b/views/campground.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px"></div>
 <div class="container">
-  <h1>Campground</h1>
+  <div id="map" style="width: 100%; height: 500px"></div>
+  <h1 class="my-3 display-3">Campgrounds</h1>
   <ul>
     <% for(campground of campgrounds) { %>
-    <div class="card my-2">
+    <div class="card my-2 w-100">
       <div class="row">
         <div class="col-md-4">
           <% if(campground.img.length) {%>
@@ -31,7 +31,7 @@
   </ul>
 </div>
 
-<script src="/JSscripts/clusterMap.js"></script>
 <script>
   const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
 </script>
+<script src="/JSscripts/clusterMap.js"></script>
