--- a/public/CSS/img-ctn.css
+++ b/public/CSS/img-ctn.css
@@ -1,6 +1,35 @@
-.img-ctn {
-  display: flex;
-  align-items: center;
-  height: 70% !important;
-  background-color: rgb(143, 156, 156);
+/*Login form*/
+
+.loginForm {
+  width: 30% !important;
+  height: auto;
+  /* border: 2px solid black; */
+  border-radius: 5px;
+  padding: 1rem;
+  display: block;
+  margin: auto;
+}
+
+.loginForm img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  margin: 1rem 0px;
+}
+
+.underline {
+  height: 2px;
+  width: 100%;
+  border: 3px solid mediumaquamarine;
+}
+
+@media screen and (max-width: 500px) {
+  .loginForm {
+    width: 80% !important;
+  }
+}
+@media screen and (min-width: 500px) and (max-width: 1000px) {
+  .loginForm {
+    width: 50% !important;
+  }
 }
