--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,7 +17,13 @@
     <div class="card mb-3">
       <div id="map" style="width: 100%; height: 300px"></div>
       <div class="col-12">
-        <div class="img-ctn">
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+          "
+        >
           <div
             id="carouselExampleControls"
             class="carousel slide"
