--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,27 +1,35 @@
 <% layout('layouts/boilerplate')%>
-<h1>Login</h1>
-<form action="/login" class="validated-form" method="POST" novalidate>
-  <div>
-    <label for="username" class="form-label">Username:</label>
-    <input
-      type="text"
-      id="username"
-      name="username"
-      required
-      class="form-control mb-2"
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <div>
-    <label for="password" class="form-label">Password:</label>
-    <input
-      type="password"
-      id="password"
-      name="password"
-      required
-      class="form-control mb-2"
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <button class="btn btn-success">LOGIN</button>
-</form>
+
+<link rel="stylesheet" href="/CSS/img-ctn.css" />
+
+<div class="loginForm">
+  <h1>Login</h1>
+  <div class="underline"></div>
+  <img src="/CSS/images/loginbackground.jpg" alt="" />
+  <div class="underline"></div>
+  <form action="/login" class="validated-form" method="POST" novalidate>
+    <div>
+      <label for="username" class="form-label">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        required
+        class="form-control mb-2"
+      />
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+    <div>
+      <label for="password" class="form-label">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        class="form-control mb-2"
+      />
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+    <button class="btn btn-success">LOGIN</button>
+  </form>
+</div>
