--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,38 +1,46 @@
 <% layout('layouts/boilerplate')%>
-<h1>Register</h1>
-<form action="/register" class="validated-form" method="POST" novalidate>
-  <div>
-    <label for="username" class="form-label">Username:</label>
-    <input
-      type="text"
-      id="username"
-      name="user[username]"
-      required
-      class="form-control mb-2"
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <div>
-    <label for="email" class="form-label">Email:</label>
-    <input
-      type="email"
-      id="email"
-      name="user[email]"
-      required
-      class="form-control mb-2"
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <div>
-    <label for="password" class="form-label">Password:</label>
-    <input
-      type="password"
-      id="password"
-      name="user[password]"
-      required
-      class="form-control mb-2"
-    />
-    <div class="valid-feedback">Looks good!</div>
-  </div>
-  <button class="btn btn-success">Submit</button>
-</form>
+
+<link rel="stylesheet" href="/CSS/img-ctn.css" />
+
+<div class="loginForm">
+  <h1>Register</h1>
+  <div class="underline"></div>
+  <img src="/CSS/images/loginbackground.jpg" alt="" />
+  <div class="underline"></div>
+  <form action="/register" class="validated-form" method="POST" novalidate>
+    <div>
+      <label for="username" class="form-label">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="user[username]"
+        required
+        class="form-control mb-2"
+      />
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+    <div>
+      <label for="email" class="form-label">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="user[email]"
+        required
+        class="form-control mb-2"
+      />
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+    <div>
+      <label for="password" class="form-label">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="user[password]"
+        required
+        class="form-control mb-2"
+      />
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+    <button class="btn btn-success">Submit</button>
+  </form>
+</div>
